v5.4.5
- Updated - Starter content blockGap to group since it was disabled on columns (we might enable it on the theme)
- Updated - Inputs to add form classes to Gutenberg Class suggestion extension
- Updated - Admin style improvements / show Licenses tab for upcoming extensions
- Updated - Pass $attributes to Comments/Latest Posts Blocks (widgets) template filter
- Removed - 2nd post-author with box style from single.html template
- Removed - CF7 Plugin integration - it will be re-made as an extension

v5.4.4
- Updated - Header/Footer/Content PHP fallbacks
- Updated - Adjusted WooCoomerce wrapper on legacy template
- Updated - Adjusted Single Post comment form margins
- Updated - JS logging only when developer mode is enabled
- Fixed - a notice on WooCoomerce Leave a Review form regarding Privacy Policy field
- Fixed - Inputs label return vs echo bug (visible on comment form)

v5.4.3
- Updated - Post content remove get_the_content args
- Updated - Post comments message margin bottom to 0 when there are no comments
- Fixed - Double unique classes generated by Gutenberg Styles extension for blocks without wrapper (eg: pattern)
- Fixed - Gutenberg Style output for blockGap after WP 5.9 RC1

v5.4.2
- Fixed - Inputs get_content() method to return HTML instead of echoing it
- Fixed - Faded separator to max-width styleing
- Updated - CF7 Submit module wrapper to .wp-block-button and button default background + color to primary

v5.4.1
- Updated - Bump required WP version to 5.9-beta4
- Updated - Post Excerpt custom classname and text align support
- Fixed - CSS Splitting string issue with ending "}" when having media queries

v5.4.0
- Updated - Revert back the removal of GB Block support hooks

v5.3.9
- Updated - Headers Navigation pattern updated

v5.3.8
- Removed - Classic Menus support.
- Updated - Header/Footer containers for non-FSE pages + adjustments to filters names/logic
- Fixed - Gutenberg Editor admin columns widths overflowing with custom "col-" classes
